# esp32c3_idf_quickstart

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
